# plusbussim

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Trafiktal.c  datatypes.h  debug.c  debug.h  direction.c  hello.c  input.txt  node.c  node.h  pseudo.c  rand.c  road_data.c  roaddata.c  simbuildinterpreter.c  simbuildinterpreter.h  simulation.c  simulation.h  trafficlights.c  trafficlights.h  variables.h  y.txt
